Revised Add Location cancel button and text field to connect to IBAction functions, Revised .gitignore to include config folder, Revised post locations response in Parse API to decode data and encode it back to convert to correct data type

--- a/.gitignore
+++ b/.gitignore
@@ -36,9 +36,7 @@ xcuserdata/
 *.xccheckout
 *.xcscmblueprint
 .DS_Store
-Config/MyKeys.xcconfig
-Config/debug.xcconfig
-Config/release.xcconfig
+On The Map/Config/*
 
 ## Obj-C/Swift specific
 *.hmap
